Added block regeneration